--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,20 +8,24 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.Activity.MainActivity">
+        <activity android:name=".view.Activity.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.Activity.DetailActivity" />
         <activity android:name=".view.Activity.HeroListActivity" />
         <activity android:name=".view.Activity.DescriptionAcrivity" />
-
+        <activity android:name=".view.Activity.SignUpActivity" />
+        <activity android:name=".view.Activity.ProfileActivity" />
+        <activity android:name=".view.Activity.DetailUserActivity" />
+        <activity android:name=".view.Activity.ShowUserActivity" />
+        <activity android:name=".view.fragment.ShowUserListFragment" />
+        <activity android:name=".view.Activity.MainActivity"></activity>
     </application>
 
 </manifest>
